--- a/css/twext.css
+++ b/css/twext.css
@@ -2,7 +2,6 @@ body {
   background-color: white;
   width: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 a {
